# simple-args-parser

./: .gitignore  CMakeLists.txt  README.md  coderatny_args.hpp  example.cpp  shackle_opts.cpp
.github/workflows/: ci.yaml
examples/: basic_types.cpp  basic_usage.cpp  collections.cpp  error_get_option.cpp  parser_modes.cpp  pipeline_set_opts.cpp
include/: simple-args-parser.hpp
include/Args/: Assert.hpp  CastUtils.hpp  Caster.hpp  Deffs.hpp  Except.hpp  Help.hpp  Parser.hpp  TypeConcepts.hpp  TypeTraits.hpp  Utils.hpp
src/: CastUtils.cpp  Help.cpp  Parser.cpp  Utils.cpp
